<resources>
<string name="app_name">Mapping</string>
<string name="choose_map">Choose Map</string>
<string name="regular_view">Regular View</string>
<string name="hikebike_mapview">HikeBike</string>
<string name=".choose_map_activity">dfg</string>
<string name="selectmap">hij</string>
    <string name="latlbl">Latitude</string>
    <string name="lat"></string>
    <string name="lonlbl">Longitude</string>
    <string name="lon"></string>
    <string name="subbtn">Submit</string>
    <string name="setCoordinates"> Set Coordinates</string>
</resources>
