<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<TextView
        android:id="@+id/ltlbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latlbl"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/lattxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lat"
        android:textSize="18sp" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lonlbl"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/lontxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lattxt"
        android:text="@string/lon"
        android:textSize="18sp" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subbtn"
        android:id="@+id/btnsubmit"/>


</LinearLayout>