
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/latlbl"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/lattxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lat"
        android:textSize="18sp"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lonlbl"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/lontxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lon"
        android:textSize="18sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subbtn"
        android:id="@+id/btnsubmit"/>



    <org.osmdroid.views.MapView
        android:id="@+id/map1"
        tilesource="Mapnik"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:clickable="true"
        android:enabled="true" />


</LinearLayout>



